# ao-agent-dev

./: .gitignore  .gitmodules  .pyre_configuration  CLAUDE.md  Plan.md  README.md  SHARED_COMPONENTS_STRUCTURE.md  SKILL.md  TRACING_TAINT.md  conda-environment.yaml  conda-environment.yml  create_dependency_file.py  debug_db.ipynb  debug_re_test.py  main.py  package-lock.json  pyproject.toml  requirements.txt  requirements_dev.txt  test.py  test_agent_service.txt  test_ast_fix.py  test_ast_transformation.py  test_integration_simple.py
.github/: PULL_REQUEST_TEMPLATE.md
common/: cache.py  language_model.py  utils.py
configs/: cache.yaml  copilot.yaml  main.toml
docker/: backend.Dockerfile  frontend.Dockerfile  host-nginx-agops-project.conf  nginx.conf  start-nginx.sh
example_workflows/: README.md  coroutine_taint_prototype.py  debug_decorator_issue.py  reasoning_mcp_server.py  test_auto_import_injection.py  test_coroutine_taint_issue.py  test_direct_exec_func.py  test_future_import_debug.py  test_reasoning_client.py  test_subprocess_issue.py
find_errors/: find_errors.py  prompts.py
src/: README.md  __init__.py
taint_models/: __init__.py  test_models.py  test_models.pysa
testbed/: __init__.py
tests/: README.md  conftest.py  shared_test_launcher.py  test_anthropic_messages_integration.py  test_anthropic_messages_output.py  test_api_calls.py  test_api_parser.py  test_caching.py  test_caching_edit.py  test_deep_research.py  test_json_patch.py  test_openai_chat_completions_output.py  test_optional_dependencies.py  test_re_patches.py  test_similarity_search.py  test_taint.py  test_untaint_comprehensive.py  test_uuid_patches.py  test_workflow_edits_utils.py  (+1 more)
(+458 files in other folders)
