# pyproject.toml

[build-system]
requires = ["setuptools>=42", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "agent-copilot"
version = "0.1.0"
description = "A short description of your agent-copilot tool"
readme = "README.md"
requires-python = ">=3.7"

# your runtime dependencies; keep this in sync with requirements.txt
dependencies = [
]

[tool.setuptools]
package-dir = {"" = "."}
packages = ["taint_models"]

[project.scripts]
# this makes a console command `agent-copilot` that calls main.main()
agent-copilot = "main:main"
