# pyproject.toml

[build-system]
requires = ["setuptools>=42", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "agent-copilot"
version = "0.1.0"
description = "A short description of your agent-copilot tool"
readme = "README.md"
requires-python = ">=3.7"

# your runtime dependencies; keep this in sync with requirements.txt
dependencies = [
    # Should all be in full-environment.yml
]

[tool.setuptools]
# Tell setuptools to look in src/ for packages
package-dir = {"" = "src"}
# Find all packages under src/
packages = ["agent_copilot", "static_analysis", "common", "runtime_tracing"]

[tool.setuptools.package-data]
# Include non-Python files like pyre configs
static_analysis = ["pyre_static_analysis/**/*"]
# If you have other config files in agent_copilot:
# agent_copilot = ["*.yaml", "*.json"]

[project.scripts]
# Console command that calls main function in the agent_copilot package
# agent-copilot = "agent_copilot.main:main" TODO
develop = "agent_copilot.develop_shim:main"